# CatLink

./: .gitattributes  .gitignore  README.md
battery-14500-adapter/: battery-14500-adapter.kicad_pcb  battery-14500-adapter.kicad_pro  battery-14500-adapter.kicad_sch
battery-14500-adapter/fabrication/: battery-14500-adapter.csv
catlink-gateway-firmware/: .gitignore  CMakeLists.txt  README.md  sdkconfig
catlink-gateway-firmware/main/: CMakeLists.txt  main.c
catlink-gateway-pcb/: catlink-gateway-pcb.kicad_pcb  catlink-gateway-pcb.kicad_pro  catlink-gateway-pcb.kicad_sch
catlink-gateway-pcb-eval/: catlink-gateway-pcb-eval.kicad_pcb  catlink-gateway-pcb-eval.kicad_pro  catlink-gateway-pcb-eval.kicad_sch
catlink-gateway-pcb-eval/fabrication/: catlink-gateway-pcb-eval.csv
catlink-tracker-firmware/: Cargo.toml  README.md  build.rs  custom_link.x  disassemble.sh  flash.sh
catlink-tracker-firmware/src/: extract_gga.rs  main.rs  sx126x.rs  sync_cell.rs
catlink-tracker-pcb/: catlink-tracker-pcb.kicad_pcb  catlink-tracker-pcb.kicad_pro  catlink-tracker-pcb.kicad_sch
catlink-tracker-pcb-eval/: catlink-tracker-pcb-eval.kicad_pcb  catlink-tracker-pcb-eval.kicad_pro  catlink-tracker-pcb-eval.kicad_sch
catlink-tracker-pcb-eval/fabrication/: catlink-tracker-pcb-eval.csv
catlink-tracker-pcb/fabrication/: catlink-tracker-pcb.csv
catlink_app/: README.md  pubspec.yaml
catlink_app/lib/: gateway_ble.dart  info_dialog.dart  logger.dart  main.dart
enclosures/: battery14500.FCStd  gateway.FCStd  lora_antenna.FCStd  pcb.FCStd
power-measurement/: plot_power.py
(+21 files in other folders)
