[package]
authors = ["Jingwei Ni <ni.jingwei.2210@gmail.com>"]
edition = "2024"
readme = "README.md"
name = "catlink-tracker-firmware"
version = "0.2.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5", features = ["set-vtor"] }
static-fifo-queue = { path = "../../../binotation/static-fifo-queue" }
sx126x-spi-buffers = { path = "../../sx126x-spi-buffers" }

[dependencies.stm32l4]
path = "../../stm32-rs-nightlies/stm32l4"
features = ["stm32l412"]

# this lets you use `cargo fix`!
[[bin]]
name = "catlink-tracker-firmware"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
